more dependency injection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,13 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+{ 
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+      "FinDBContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FINSearchDB;Integrated Security=True;"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FinDBContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FINSearchDB;Integrated Security=True;",
-    "FInSearchAPIContext2": "Server=(localdb)\\mssqllocaldb;Database=FInSearchAPIContext2-320687b1-72d4-4e1f-95dd-8ab383d8045d;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-}
