--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
       }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "FinDBContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FINSearchDB;Integrated Security=True;"
-    }
+  "ConnectionStrings": {
+    "FinDBContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FINSearchDB;Integrated Security=True;",
+   
+  }
   }
